Frontend/communitysupplier/src/App.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans');

.App {
  text-align: center;
  font-family: 'Open Sans';
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.Navbar{
font-family: "Segoe UI";
background:#343a40;
padding-top: 1.5vh;
font-size: 2.5vh;
font-weight: 500;
padding-bottom: 1.5vh;
display: flex;
flex-direction: column;
}

.Card{

display: flex;
width: 290px;
height: 190px;
flex-direction: column;
border: 1px solid rgba(0, 0, 0, 0.2);
border-radius: 4px;
margin-left: 20px;
cursor: pointer;
padding-bottom:1vh ;
overflow:hidden ;
}


img{
  margin-left: auto;
  margin-right: auto;
text-align: center;


}

.grid-container {
  display: grid;
  margin-top: 20px;
  grid-template-columns: auto auto auto;
  padding-left: 7%;
  padding-right: 7%;
}

